# gzinjectGUI

./: .gitignore  CMakeLists.txt  README.md  commandOutput.cpp  commandOutput.h  fpInject.cpp  fpInject.h  fpguiwidget.cpp  fpguiwidget.h  gzguiwidget.cpp  gzguiwidget.h  gzinjectGUI.cpp  gzinjectGUI.h  gzinjectGUI.pro  main.cpp  preset.cpp  preset.h  settingtype.h
.github/workflows/: build.yml
presets/: fp-JP.json  fp-US.json  ootr.json
qt_6.4.2/: qt.yml
qt_6.4.2/include/QtCore/: QtCore  qconfig.h  qtcore-config.h  qtcoreexports.h  qtcoreversion.h
qt_6.4.2/include/QtDeviceDiscoverySupport/: qtdevicediscoverysupportversion.h
qt_6.4.2/include/QtFbSupport/: qtfbsupportversion.h
qt_6.4.2/include/QtGui/: qtgui-config.h  qtguiexports.h  qtguiversion.h
qt_6.4.2/include/QtWidgets/: qtwidgetsexports.h  qtwidgetsversion.h
qt_6.4.2/lib/: Qt6BundledLibpng.lib  Qt6Core.lib  Qt6EntryPoint.lib  Qt6Gui.lib  Qt6Widgets.lib
qt_6.4.2/lib/cmake/Qt6/: Qt6Targets.cmake  qt.toolchain.cmake
qt_6.4.2/lib/cmake/Qt6BuildInternals/: QtBuildInternalsExtra.cmake
qt_6.4.2/lib/cmake/Qt6BundledFreetype/: Qt6BundledFreetypeTargets.cmake
qt_6.4.2/lib/cmake/Qt6BundledLibjpeg/: Qt6BundledLibjpegTargets.cmake  Qt6BundledLibjpegVersionlessTargets.cmake
qt_6.4.2/lib/cmake/Qt6BundledLibpng/: Qt6BundledLibpngTargets.cmake
qt_6.4.2/lib/cmake/Qt6Core/: Qt6CoreAdditionalTargetInfo.cmake  Qt6CoreConfigExtras.cmake  Qt6CoreTargets.cmake
qt_6.4.2/lib/cmake/Qt6CoreTools/: Qt6CoreToolsAdditionalTargetInfo.cmake  Qt6CoreToolsConfig.cmake  Qt6CoreToolsTargets-release.cmake  Qt6CoreToolsTargets.cmake  Qt6CoreToolsVersionlessTargets.cmake
qt_6.4.2/lib/cmake/Qt6DeviceDiscoverySupportPrivate/: Qt6DeviceDiscoverySupportPrivateTargets.cmake
qt_6.4.2/lib/cmake/Qt6EntryPointPrivate/: Qt6EntryPointPrivateConfig.cmake  Qt6EntryPointPrivateTargets.cmake
qt_6.4.2/lib/cmake/Qt6FbSupportPrivate/: Qt6FbSupportPrivateTargets.cmake
qt_6.4.2/lib/cmake/Qt6FreetypePrivate/: Qt6FreetypePrivateTargets.cmake
qt_6.4.2/lib/cmake/Qt6Gui/: Qt6GuiAdditionalTargetInfo.cmake  Qt6GuiDependencies.cmake  Qt6GuiTargets.cmake  Qt6QGifPluginAdditionalTargetInfo.cmake  Qt6QGifPluginTargets.cmake  Qt6QICOPluginAdditionalTargetInfo.cmake  Qt6QICOPluginTargets.cmake  Qt6QJpegPluginAdditionalTargetInfo.cmake  Qt6QJpegPluginTargets.cmake  Qt6QMinimalIntegrationPluginAdditionalTargetInfo.cmake  Qt6QMinimalIntegrationPluginTargets.cmake  Qt6QOffscreenIntegrationPluginAdditionalTargetInfo.cmake  Qt6QOffscreenIntegrationPluginTargets.cmake  Qt6QWindowsDirect2DIntegrationPluginAdditionalTargetInfo.cmake  Qt6QWindowsDirect2DIntegrationPluginTargets.cmake  Qt6QWindowsIntegrationPluginAdditionalTargetInfo.cmake  Qt6QWindowsIntegrationPluginTargets.cmake
qt_6.4.2/lib/metatypes/: qt6gui_release_metatypes.json
qt_6.4.2/mkspecs/: qconfig.pri  qmodule.pri
qt_6.4.2/modules/: Core.json  DeviceDiscoverySupportPrivate.json  EntryPointPrivate.json  FbSupportPrivate.json  FreetypePrivate.json  Gui.json  HarfbuzzPrivate.json  JpegPrivate.json  PngPrivate.json  Widgets.json  ZlibPrivate.json
res/: LICENSE.md  icon.icns  icon.rc
(+17 files in other folders)
